--- a/internal/e2e/.env
+++ b/internal/e2e/.env
@@ -1,3 +1,3 @@
-LOAD_TEST_SERVER=false
+LOAD_TEST_SERVER=true
 LOCAL_HOST_URL=http://127.0.0.1:8080
 OPENAPI_RELATIVE_PATH=../../api/keyvalue/api.yml
