[Releaser] Changed .goreleaser to add api.yml file needed
Signed-off-by: Kevin <16136308+Kevincifuentes@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,6 +46,10 @@ changelog:
       - "^test:"
 
 release:
+  draft: true
+  use_existing_draft: true
+  extra_files:
+    - glob: ./api/keyvalue/api.yml
   footer: >-
 
     ---
