--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -48,6 +48,8 @@ changelog:
 release:
   draft: true
   use_existing_draft: true
+  replace_existing_draft: true
+  replace_existing_artifacts: true
   extra_files:
     - glob: ./api/keyvalue/api.yml
   footer: >-
