[Releaser] Removed draft release on goreleaser
Signed-off-by: Kevin <16136308+Kevincifuentes@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,7 +46,7 @@ changelog:
       - "^test:"
 
 release:
-  draft: true
+  draft: false
   use_existing_draft: true
   replace_existing_draft: true
   replace_existing_artifacts: true
