--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: test
         env:
-          GITHUB_TOKEN: ${{ matrix.os == 'ubuntu-latest' && secrets.GITHUB_TOKEN || '' }} # Needed for GitHub badge storer integration test
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}} # Needed for GitHub badge storer integration test
         run: bash runAllTests.sh
 
       - name: upload cover profile artifact
