--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: Test and coverage
 on: [push]
 permissions:
   contents: write
@@ -29,7 +29,11 @@ jobs:
   check-coverage:
     runs-on: ubuntu-latest
     needs: test
-
+    permissions:
+      id-token: write
+      contents: read
+      pull-requests: write
+      actions: read
     steps:
       - name: checkout
         uses: actions/checkout@v4
