[Test Action] Download with final.out name the artifact
Signed-off-by: Kevin <16136308+Kevincifuentes@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: download profile
         uses: actions/download-artifact@v4
+        with:
+          name: final.out
 
       - name: download artifact (main.breakdown)
         id: download-main-breakdown
