[Badge] Setting public repository for badge of coverage
Signed-off-by: Kevin <16136308+Kevincifuentes@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,8 @@ jobs:
           config: ./.github/.testcoverage.yml
           profile: final.out
           git-branch: badges
+          git-repository: Kevincifuentes/badges
+          git-file-name: .badges/${{ github.repository }}/${{ github.ref_name }}/coverage.svg
           git-token: ${{ github.ref_name == 'main' && secrets.GITHUB_TOKEN || '' }}
           breakdown-file-name: ${{ github.ref_name == 'main' && 'main.breakdown' || '' }}
           diff-base-breakdown-file-name: ${{ steps.download-main-breakdown.outputs.found_artifact == 'true' && 'main.breakdown' || '' }}
