Changed permissions for check-coverage
Signed-off-by: Kevin <16136308+Kevincifuentes@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
     needs: test
     permissions:
       id-token: write
-      contents: read
+      contents: write
       pull-requests: write
       actions: read
     steps:
