--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,11 +29,7 @@ jobs:
   check-coverage:
     runs-on: ubuntu-latest
     needs: test
-    permissions:
-      id-token: write
-      contents: write
-      pull-requests: write
-      actions: read
+    permissions: write-all
     steps:
       - name: checkout
         uses: actions/checkout@v4
